KIN-995 fixes alignment issue

--- a/src/screens/clients/client-basic-details-card/ClientBasicDetailsCardComponent.scss
+++ b/src/screens/clients/client-basic-details-card/ClientBasicDetailsCardComponent.scss
@@ -68,7 +68,9 @@
 
         .data-label {
           margin-bottom: 8px;
-
+        }
+        .data-value{
+          text-align: center;
         }
       }
       .dashed-border {
